2008-08-07  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-db/tracker-db-index.c: Fixed min_bucket
	condition. It should be bigger than 0.

	* tests/tracker-indexer/tracker-index-test.c: Updated tests.

2008-08-07  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (tracker_indexer_set_running):
	Fix typo. Also try to flush the index before pausing.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* utils/qdbm/print-words.c: (main):
	* utils/qdbm/search-word.c: (main): Fixed printing help when args
	are broken.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* configure.ac: 
	* tests/libtracker-common/tracker-type-utils-test.c:
	* tests/tracker-indexer/Makefile.am:
	* tests/tracker-indexer/tracker-index-test.c: Removed dirty hacks
	for testing the index API and cleaned up the code a little.
	
	* src/libtracker-common/Makefile.am:
	* src/libtracker-common/tracker-index-item.[ch]:
	* src/libtracker-db/Makefile.am:
	* src/libtracker-db/tracker-db-index-item.[ch]:
	* src/libtracker-db/tracker-db-index.[ch]: 
	* src/tracker-indexer/tracker-indexer.c:
	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-query-tree.c: Renamed TrackerIndexItem to
	TrackerDBIndexItem and TrackerSearchHit to TrackerDBIndexItemRank.
	Also moved those both to libtracker-db from libtracker-common.

	* src/tracker-indexer/tracker-index.[ch]: Removed in favour of the
	libtracker-db version.
	
	* utils/qdbm/Makefile.am:
	* utils/qdbm/print-words.c:
	* utils/qdbm/search-word.c: Fixed tools.

2008-08-07  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-index-item.h: Added
	TrackerSearchHit typedef here from the TrackerQueryTreeModule. 

	* configure.ac:
	* src/libtracker-db/tracker-db-index-manager.[ch]:
	* src/libtracker-db/tracker-db-index.[ch]:
	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/tracker-indexer.c: 
	* src/tracker-indexer/tracker-main.c:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-db.[ch]: